RESOLVED FIXED40791
Warnings from -Wextra in a Chromium Mac build
https://bugs.webkit.org/show_bug.cgi?id=40791
Summary Warnings from -Wextra in a Chromium Mac build
Thomas Van Lenten
Reported 2010-06-17 10:59:21 PDT
A bunch of warnings from a -Wextra Chromium Mac build (will become the default). - checks of unsigned >= 0 - enumeral and non-enumeral type in conditional expression - copy ctors that don't call the super copy ctor or ctor.
Attachments
proposed patch for the warnings (6.78 KB, patch)
2010-06-17 11:11 PDT, Thomas Van Lenten
dglazkov: review-
dglazkov: commit-queue-
second patch with fixed email addr (6.74 KB, patch)
2010-06-17 11:27 PDT, Thomas Van Lenten
no flags
Fixing tests part of changelog (6.76 KB, patch)
2010-06-17 11:34 PDT, Thomas Van Lenten
no flags
Thomas Van Lenten
Comment 1 2010-06-17 11:11:05 PDT
Created attachment 59018 [details] proposed patch for the warnings
Dimitri Glazkov (Google)
Comment 2 2010-06-17 11:21:32 PDT
Comment on attachment 59018 [details] proposed patch for the warnings ok. WebCore/platform/chromium/ChromiumDataObject.cpp:70 + : RefCounted<ChromiumDataObject>() Fascinating.
Dimitri Glazkov (Google)
Comment 3 2010-06-17 11:23:25 PDT
Comment on attachment 59018 [details] proposed patch for the warnings oops, address is wrong. Can you re-upload with fix?
Thomas Van Lenten
Comment 4 2010-06-17 11:27:14 PDT
Created attachment 59021 [details] second patch with fixed email addr
Thomas Van Lenten
Comment 5 2010-06-17 11:34:15 PDT
Created attachment 59023 [details] Fixing tests part of changelog
WebKit Commit Bot
Comment 6 2010-06-19 07:07:11 PDT
Comment on attachment 59023 [details] Fixing tests part of changelog Clearing flags on attachment: 59023 Committed r61486: <http://trac.webkit.org/changeset/61486>
WebKit Commit Bot
Comment 7 2010-06-19 07:07:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.