2010-06-19  Thomas Van Lenten  <thomasvl@chromium.org>

Reviewed by David Levin.

        Warnings from -Wextra in a Chromium Mac build
        1. checks of unsigned >= 0
        2. enumeral and non-enumeral type in conditional expression
        3. copy ctors that don't call the super copy ctor or ctor
        No functionality change so no new tests.

        https://bugs.webkit.org/show_bug.cgi?id=40791

        * platform/chromium/ChromiumDataObject.cpp:
        (WebCore::ChromiumDataObject::ChromiumDataObject):
        * platform/chromium/ThemeChromiumMac.mm:
        (WebCore::updateStates):
        * rendering/RenderThemeChromiumMac.mm:
        (WebCore::RenderThemeChromiumMac::updateActiveState):
2010-06-19  Thomas Van Lenten  <thomasvl@chromium.org>

        Reviewed by David Levin.

        Warnings from -Wextra in a Chromium Mac build
        1. checks of unsigned >= 0
        2. enumeral and non-enumeral type in conditional expression
        3. copy ctors that don't call the super copy ctor or ctor

        https://bugs.webkit.org/show_bug.cgi?id=40791

        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::getSuggestion):
        (WebKit::AutoFillPopupMenuClient::removeSuggestionAtIndex):
        (WebKit::AutoFillPopupMenuClient::valueChanged):
        (WebKit::AutoFillPopupMenuClient::selectionChanged):
        * src/AutocompletePopupMenuClient.cpp:
        (WebKit::AutocompletePopupMenuClient::getSuggestion):
        (WebKit::AutocompletePopupMenuClient::removeSuggestionAtIndex):

Canonical link: https://commits.webkit.org/52496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61486 268f45cc-cd09-0410-ab3c-d52691b4dbfc